# customer-dedupe

./: .gitignore  README.md  pyproject.toml
scripts/: generate_reference_dataset.py  install.sh
src/customer_dedupe/: __init__.py  __main__.py  cli.py  interfaces.py  models.py  schema.py
src/customer_dedupe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/customer_dedupe/datasets/: __init__.py  profiles.py  reference.py
src/customer_dedupe/runners/: __init__.py  dataflow.py  local.py
src/customer_dedupe/steps/: __init__.py  cleanup.py  deterministic.py  embedding.py
tests/: test_embedding_pipeline.py
