[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-dedupe"
version = "0.1.0"
description = "Interfaces and baseline implementations for customer account deduplication"
requires-python = ">=3.10"

[project.scripts]
customer-dedupe = "customer_dedupe.cli:main"

[project.optional-dependencies]
sbert = ["sentence-transformers>=3.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
